@@ -103,6 +103,9 @@ Set a title
 \fB\-\-font\-file FILE\fR
 Specify the font. Should work with most font file formats supported by FreeType, such as TTF and OTF, among others.
 .TP
+\fB\-\-font\-scale SCALE\fR
+Scale the size of all fonts.
+.TP
 \fB\-\-font\-size SIZE\fR
 Font size used by the date and title.
 .TP
